--- a/index.html
+++ b/index.html
@@ -307,6 +307,37 @@
 
       .sticker { font-size: 40px; }
     }
+
+    /* 💻 14-inch Laptop Fix (1366px screens) */
+@media (max-width: 1400px) and (min-width: 900px) {
+  .proposal-card {
+    max-width: 650px;
+    padding: 40px 35px;
+    min-height: 480px;
+  }
+
+  .proposal-card h1 {
+    font-size: 3rem;
+  }
+
+  .subtitle {
+    font-size: 1.05rem;
+    margin-bottom: 35px;
+  }
+
+  .success-message h2 {
+    font-size: 2.6rem;
+  }
+
+  #typingText {
+    font-size: 1.2rem;
+  }
+
+  .sticker {
+    font-size: 48px;
+  }
+}
+    
   </style>
 </head>
 
